--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=demo
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.probes.enabled=false #true enable both the health
+management.health.readinessState.enabled=false
+management.health.livenessState.enabled=true
+
